// Copyright 2021-2023 The Connect Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package test;

// Note: We do not exhaust all field types
message Proto3Message {
  string string_field = 1;
  bytes bytes_field = 2;
  int32 int32_field = 3;
  int64 int64_field = 4;
  double double_field = 5;
  bool bool_field = 6;
  Proto3Enum enum_field = 7;
  Proto3Message message_field = 8;

  optional string optional_string_field = 9;

  repeated string repeated_string_field = 17;
  repeated Proto3Message repeated_message_field = 18;
  repeated Proto3Enum repeated_enum_field = 19;

  oneof either {
    string oneof_string_field = 31;
    int32 oneof_int32_field = 33;
  }

  map<string, int64> map_string_int64_field = 39;
  map<string, Proto3Message> map_string_message_field = 40;
  map<string, Proto3Enum> map_string_enum_field = 41;
}

enum Proto3Enum {
  PROTO3_ENUM_UNSPECIFIED = 0;
  PROTO3_ENUM_YES = 1;
  PROTO3_ENUM_NO = 2;
}
